Added put api, now all api works fine
