# api/api/controllers/device.js
@@ -1,23 +1,45 @@
 'use strict';
 
 var util = require('util');
-var app = require('../../app');
 var connection;
 
 module.exports = {
-		getStatus: getStatus,
-		getValue: getValue,
-		getInfo: getInfo
+	getStatus: getStatus,
+	putStatus: putStatus,
+	getValue: getValue,
+	putValue: putValue,
+	getInfo: getInfo
 };
 
 function getStatus(req, res) {
 	var deviceName = req.swagger.params.deviceName.value || 'unknow';
 	
 	dbConnection();
-	connection.query('SELECT status FROM device WHERE name="'+deviceName+'"', function (error, results, fields) {
-	  if (error)
-		  throw error;
-	  res.json(results[0]); //Return the device status in json format
+	connection.query('SELECT * FROM device WHERE name="'+deviceName+'"', function (error, results, fields) {
+		if (error) {
+			res.status(400); //Error
+			res.json({"message" : "Error on get device status value."});
+		}
+		var accessValues = results[0];
+		res.json({"value" : accessValues['status']}); //Return the device status value in json format
+	});
+	connection.end();
+}
+
+function putStatus(req, res) {
+	var deviceName = req.swagger.params.deviceName.value || 'unknow';
+	var body = req.swagger.params.newValue.value || 'unknow';
+	var newValue = body["newValue"];
+	newValue = newValue[0]; //This contain the status value
+	
+	dbConnection();
+	connection.query('UPDATE device SET status="'+newValue["value"]+'" WHERE name="'+deviceName+'"', function (error, results, fields) {
+		if (error) {
+			res.status(400); //Error
+			res.json({"message" : "Error on update status device."});
+		}
+		var accessValues = results[0];
+		res.json({"value" : newValue["value"]}); //Return the device status value in json format
 	});
 	connection.end();
 }
@@ -26,10 +48,31 @@ function getValue(req, res) {
 	var deviceName = req.swagger.params.deviceName.value || 'unknow';
 	
 	dbConnection();
-	connection.query('SELECT value FROM device WHERE name="'+deviceName+'"', function (error, results, fields) {
-	  if (error)
-		  throw error;
-	  res.json(results[0]); //Return the device value in json format
+	connection.query('SELECT * FROM device WHERE name="'+deviceName+'"', function (error, results, fields) {
+		if (error) {
+			res.status(400); //Error
+			res.json({"message" : "Error on get device value."});
+		}
+		var accessValues = results[0];
+		res.json({"value" : accessValues['value']}); //Return the device value in json format
+	});
+	connection.end();
+}
+
+function putValue(req, res) {
+	var deviceName = req.swagger.params.deviceName.value || 'unknow';
+	var body = req.swagger.params.newValue.value || 'unknow';
+	var newValue = body["newValue"];
+	newValue = newValue[0]; //This contain the value
+	
+	dbConnection();
+	connection.query('UPDATE device SET value="'+newValue["value"]+'" WHERE name="'+deviceName+'"', function (error, results, fields) {
+		if (error) {
+			res.status(400); //Error
+			res.json({"message" : "Error on update value device."});
+		}
+		var accessValues = results[0];
+		res.json({"value" : newValue["value"]}); //Return the device status value in json format
 	});
 	connection.end();
 }
@@ -39,11 +82,11 @@ function getInfo(req, res) {
 	
 	dbConnection();
 	connection.query('SELECT * FROM device WHERE name="'+deviceName+'"', function (error, results, fields) {
-	  if (error)
-		  throw error;
-	  if(results.length > 0) {          
-        res.json(results[0]); //Return the device info in json format
-      }
+		if (error)
+			res.status(400); //Error
+		if(results.length > 0) {          
+			res.json(results[0]); //Return all the device info in json format
+		}
 	});
 	connection.end();
 }
